fix: align the buttons on assets page for mobile devices

--- a/src/components/assets/styles/asset-list.scss
+++ b/src/components/assets/styles/asset-list.scss
@@ -256,6 +256,10 @@
 }
 
 .column---title-button {
+  margin-right: -22px;
+  @media (min-width: $sm) {
+    margin-right: -64px;
+  }
   @media (min-width: $md) {
     margin-right: 8px;
   }
